# BI-PA2-BattleShipGame

./: Doxyfile  Makefile  README.md  prohlaseni.txt  ships.txt  zadani.txt
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardTile.cpp  BoardTile.h  CMakeLists.txt  CleverAIPlayer.cpp  CleverAIPlayer.h  Client.h  ConsolePlayer.cpp  ConsolePlayer.h  Coord.h  EasyAIPlayer.cpp  EasyAIPlayer.h  Game.cpp  Game.h  GeniusAIPlayer.cpp  GeniusAIPlayer.h  NetworkPlayer.cpp  NetworkPlayer.h  Player.h  Session.cpp  Session.h  Ship.cpp  Ship.h  Strategy.cpp  Strategy.h  main.cpp
